working on ai plugin - saving progress